fix: all topics button color contrast

--- a/lms/static/sass/bootstrap/_components.scss
+++ b/lms/static/sass/bootstrap/_components.scss
@@ -92,6 +92,7 @@
 
     .all-topics {
       border: none;
+      color: $primary;
     }
   }
 
